# SlicerChai

./: CMakeLists.txt  CMakeLists_.txt  CMakeLists_Br.txt  DRDTriScaleVol4.nrrd  README.md  cone_and_sphere.nrrd  drdModAxialCone_2.nrrd  drdModAxialCone_2_mod.nrrd  drdModAxialCone_3.nrrd  trials.csv  x.nrrd
HBVDSciVisP/: CMakeLists.txt  qSlicerHBVDSciVisPModule.cxx  qSlicerHBVDSciVisPModule.h  qSlicerHBVDSciVisPModuleWidget.cxx  qSlicerHBVDSciVisPModuleWidget.h
HBVDSciVisP/Logic/: vtkSlicerHBVDSciVisPLogic.cxx  vtkSlicerHBVDSciVisPLogic.h
HBVDSciVisP/Resources/: qSlicerHBVDSciVisPModule.qrc
HBVDSciVisP/Resources/Icons/: SlicerChai.ai
HBVDSciVisP/Resources/UI/: qSlicerHBVDSciVisPFooBarWidget.ui  qSlicerHBVDSciVisPModuleWidget.ui
HBVDSciVisP/Widgets/: qSlicerHBVDSciVisPFooBarWidget.cxx  qSlicerHBVDSciVisPFooBarWidget.h
